ejercicio3_3/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-route
spec:
  parentRefs:
  - name: my-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /logoutput
    backendRefs:
    - name: logoutput-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    backendRefs:
    - name: pingpong-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: pingpong-svc
      port: 80
